--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -81,6 +81,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveLeftRight",Scale=1.000000,Key=A)
 +AxisMappings=(AxisName="Moveback",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveLeftRight",Scale=-1.000000,Key=D)
++AxisMappings=(AxisName="MoveJump",Scale=1.000000,Key=SpaceBar)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
